# fractions

./: .gitignore  .style.yapf  fraction_blocks.py  license.md  main.py  make_blocks.py  pyproject.toml
